# python-kickstarter

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .semgrep.yml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  copier.yml  justfile  mise.toml  pyproject.toml
.github/workflows/: test-template.yml
docs/superpowers/plans/: 2026-06-23-dogfood-typecheck.md  2026-06-24-dogfood-ruff.md  2026-06-25-dependency-inventory.md  2026-07-01-dogfood-gap-audit.md  2026-07-01-dogfood-precommit.md  2026-07-01-dogfood-scanners.md
docs/superpowers/specs/: 2026-06-23-dogfood-ruff-design.md  2026-06-23-dogfood-typecheck-design.md  2026-06-25-dependency-inventory-design.md  2026-07-01-dogfood-precommit-design.md  2026-07-01-dogfood-scanners-design.md
template/: .editorconfig  .gitignore.jinja  .pre-commit-config.yaml.jinja  AGENTS.md.jinja  LICENSE.jinja  README.md.jinja  justfile.jinja  mise.toml.jinja  pyproject.toml.jinja  {% if enable_renovate %}renovate.json{% endif %}.jinja  {{ _copier_conf.answers_file }}.jinja
template/.github/workflows/: ci.yml.jinja  {% if enable_mutation_tests %}mutation.yml{% endif %}.jinja  {% if enable_scanners or enable_dependency_audit or enable_sha_pin_policy %}scan.yml{% endif %}.jinja
template/src/{{ package_name }}/: __init__.py.jinja  core.py.jinja  {% if project_type == 'application' %}__main__.py{% endif %}.jinja
template/tests/: conftest.py.jinja
template/tests/unit/: test_example.py.jinja  {% if project_type == 'application' %}test_main.py{% endif %}.jinja
template/tests/{% if enable_policy_tests %}policy{% endif %}/: test_gates.py.jinja
template/tests/{% if enable_property_tests %}property{% endif %}/: conftest.py.jinja  test_example_property.py.jinja
tests/: conftest.py  test_generation.py  test_update_roundtrip.py
