[project]
name = "python-kickstarter"
version = "0.0.0"
description = "Copier template scaffolding a fully-gated Python project."
requires-python = ">=3.11"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "copier>=9.6,<10",
    "pytest>=8",
    "pyyaml>=6",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-q", "--strict-markers", "--strict-config", "--import-mode=importlib"]
